--- a/CityAtoms/CityAtoms/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/CityAtoms/CityAtoms/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5fg-gf-FCU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
@@ -577,7 +577,7 @@
         <!--Symptoms View Controller-->
         <scene sceneID="vB1-Z2-hLM">
             <objects>
-                <viewController id="oe4-EI-Xrs" customClass="SymptomsViewController" customModule="CityAtoms" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="symptoms" id="oe4-EI-Xrs" customClass="SymptomsViewController" customModule="CityAtoms" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UYi-C8-uyX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1009,7 +1009,7 @@
         <!--Navigation Controller-->
         <scene sceneID="YpP-lQ-BmP">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5fg-gf-FCU" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="main" automaticallyAdjustsScrollViewInsets="NO" id="5fg-gf-FCU" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="g6v-JF-6Of">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
